objects/QIDC__foo_ims__c.object
<CustomObject>
    <description>This object is created for apex unit tests.</description>
    <fields>
        <fullName>QIDC__CheckboxOne_ims__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CheckboxOne_ims</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QIDC__CheckboxTwo_ims__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CheckboxTwo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QIDC__DateOne_ims__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DateOne</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QIDC__DateTimeOne_ims__c</fullName>
        <description>This field is used to store DateTime value.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field is used to store DateTime value.</inlineHelpText>
        <label>DateTimeOne</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>QIDC__ExternalIDOne_ims__c</fullName>
        <description>Generic externalID field</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>ExternalIDOne</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__ExternalIDTwo_ims__c</fullName>
        <description>Generic externalID field</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>ExternalIDTwo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__LongTextOne_ims__c</fullName>
        <description>This field is used to store blob value only.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field is used to store blob value only.</inlineHelpText>
        <label>LongTextOne</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QIDC__LookupChild_ims__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>foo (Account)</relationshipLabel>
        <relationshipName>foo1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QIDC__LookupOne_ims__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LookupOne</label>
        <referenceTo>QIDC__foo_ims__c</referenceTo>
        <relationshipLabel>LookupOne</relationshipLabel>
        <relationshipName>lookupone_ims</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QIDC__LookupParent_ims__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>foo</relationshipLabel>
        <relationshipName>foo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QIDC__LookupTwo_ims__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LookupTwo</label>
        <referenceTo>QIDC__foo_ims__c</referenceTo>
        <relationshipLabel>LookupTwo</relationshipLabel>
        <relationshipName>lookuptwo_ims</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QIDC__Multiselect_PicklistOne__c</fullName>
        <label>Multiselect PicklistOne</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QIDC__NumberOne_ims__c</fullName>
        <description>This field is used to store integer values only.</description>
        <inlineHelpText>This field is used to store integer values only.</inlineHelpText>
        <label>NumberOne</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QIDC__NumberTwo_ims__c</fullName>
        <description>This field is used to store float and double type.</description>
        <inlineHelpText>This field is used to store float and double type.</inlineHelpText>
        <label>NumberTwo</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QIDC__Parent_Contact_ims__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>foo</relationshipLabel>
        <relationshipName>foo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QIDC__TextFive_ims__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>TextFive</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__TextFour_ims__c</fullName>
        <description>Generic text field</description>
        <encryptionScheme>None</encryptionScheme>
        <label>TextFour</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__TextOne_ims__c</fullName>
        <description>Generic text field</description>
        <encryptionScheme>None</encryptionScheme>
        <label>TextOne</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__TextSix_ims__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>TextSix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__TextThree_ims__c</fullName>
        <description>Generic text field</description>
        <encryptionScheme>None</encryptionScheme>
        <label>TextThree</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__TextTwo_ims__c</fullName>
        <description>Generic text field</description>
        <encryptionScheme>None</encryptionScheme>
        <label>TextTwo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__URLOne_ims__c</fullName>
        <description>This field is used to store URL values only.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field is used to store URL values only.</inlineHelpText>
        <label>URLOne</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>QIDC__picklistOne_ims__c</fullName>
        <label>picklistOne</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>picklistValueOne</fullName>
                </value>
                <value>
                    <fullName>picklistValueTwo</fullName>
                </value>
                <value>
                    <fullName>picklistValueThree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>foo</label>
    <listViews>
        <fullName>QIDC__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>QIDC__FooView0</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>QIDC__ExternalIDOne_ims__c</columns>
        <columns>QIDC__LookupOne_ims__c</columns>
        <columns>QIDC__LookupTwo_ims__c</columns>
        <columns>QIDC__TextOne_ims__c</columns>
        <columns>QIDC__LookupChild_ims__c</columns>
        <filterScope>Everything</filterScope>
        <label>FooView0</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>foo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>foo</pluralLabel>
    <recordTypes>
        <fullName>QIDC__foo_recordTypeOne_ims</fullName>
        <active>true</active>
        <label>recordType_One</label>
    </recordTypes>
    <recordTypes>
        <fullName>QIDC__foo_recordType_Two</fullName>
        <active>true</active>
        <label>recordType_Two</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>